<package>
  <name>image_tools_catkin</name>
  <version>0.0.0</version>
  <description>Tools to capture and play back images to and from DDS subscriptions and publications.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>libopencv-dev</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
